--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,38 +2,89 @@ timeout: 1800s
 steps:  
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//base:static']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/base:static', 'gcr.io/$PROJECT_ID/static:latest']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//base:base']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/base:base', 'gcr.io/$PROJECT_ID/base:latest']
+  
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//base:debug']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/base:debug', 'gcr.io/$PROJECT_ID/base:debug']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//cc']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/cc:cc', 'gcr.io/$PROJECT_ID/cc:latest']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//cc:debug']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/cc:debug', 'gcr.io/$PROJECT_ID/cc:debug']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//java:java8']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/java:java8', 'gcr.io/$PROJECT_ID/java:latest']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//java:debug']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/java:debug', 'gcr.io/$PROJECT_ID/java:debug']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//java/jetty']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/java/jetty:jetty', 'gcr.io/$PROJECT_ID/java/jetty:latest']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//java/jetty:debug']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/java/jetty:debug', 'gcr.io/$PROJECT_ID/java/jetty:debug']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//experimental/python3:python3']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/experimental/python3:python3', 'gcr.io/$PROJECT_ID/python3:latest']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//experimental/python3:debug']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/experimental/python3:debug', 'gcr.io/$PROJECT_ID/python3:debug']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//experimental/python2.7:python27']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/experimental/python2.7:python27', 'gcr.io/$PROJECT_ID/python2.7:latest']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//experimental/python2.7:debug']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/experimental/python2.7:debug', 'gcr.io/$PROJECT_ID/python2.7:debug']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//experimental/nodejs']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/experimental/nodejs:nodejs', 'gcr.io/$PROJECT_ID/nodejs:latest']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//experimental/nodejs:debug']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/experimental/nodejs:debug', 'gcr.io/$PROJECT_ID/nodejs:debug']  
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//experimental/dotnet']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/experimental/dotnet:dotnet', 'gcr.io/$PROJECT_ID/dotnet:latest']
+
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '//experimental/dotnet:debug']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'bazel/experimental/dotnet:debug', 'gcr.io/$PROJECT_ID/dotnet:debug']
+
 
 images:
   - 'gcr.io/$PROJECT_ID/static:latest'
