Migrate docker rules

--- a/base/BUILD
+++ b/base/BUILD
@@ -1,10 +1,10 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
+load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_tar")
 load("@io_bazel_rules_docker//contrib:group.bzl", "group_entry", "group_file")
-load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
-load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 
 # Create /etc/passwd with the root user
@@ -57,7 +57,7 @@ cacerts(
 # A tar is needed because at the moment there is no way to create a
 # directory with specific permissions.
 
-docker_build(
+container_image(
     name = "static",
     debs = [
         packages["base-files"],
@@ -81,7 +81,7 @@ docker_build(
     ],
 )
 
-docker_build(
+container_image(
     name = "base",
     base = ":static",
     debs = [
@@ -92,7 +92,7 @@ docker_build(
 )
 
 # A debug image with busybox available.
-docker_build(
+container_image(
     name = "debug",
     base = ":base",
     directory = "/",
@@ -119,7 +119,7 @@ go_binary(
     pure = "on",
 )
 
-docker_build(
+container_image(
     name = "check_certs_image",
     base = "//base:base",
     files = [":check_certs"],
