--- a/cc/BUILD
+++ b/cc/BUILD
@@ -1,10 +1,10 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@package_bundle//file:packages.bzl", "packages")
 
 # An intermediate image for Java and other "mostly statically" compiled languages
-[docker_build(
+[container_image(
     name = "cc" if (not mode) else mode[1:],
     base = "//base" + mode,
     debs = [
