--- a/examples/dotnet/BUILD
+++ b/examples/dotnet/BUILD
@@ -1,9 +1,9 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
 
-docker_build(
+container_image(
     name = "hello",
     base = "//experimental/dotnet:dotnet",
     cmd = [
