--- a/experimental/dotnet/BUILD
+++ b/experimental/dotnet/BUILD
@@ -1,9 +1,9 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@package_bundle//file:packages.bzl", "packages")
 
-[docker_build(
+[container_image(
     name = "dotnet" if (not mode) else mode[1:],
     base = "//cc" + mode,
     debs = [
