--- a/experimental/python2.7/BUILD
+++ b/experimental/python2.7/BUILD
@@ -1,10 +1,10 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 load("@package_bundle//file:packages.bzl", "packages")
 
-[docker_build(
+[container_image(
     name = "python27" if (not mode) else mode[1:],
     # Based on //cc so that C extensions work properly.
     base = "//cc" + mode,
