--- a/java/BUILD
+++ b/java/BUILD
@@ -1,15 +1,15 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("@io_bazel_rules_docker//java:image.bzl", "java_image")
 load("@package_bundle//file:packages.bzl", "packages")
 load("//cacerts:java.bzl", "cacerts_java")
-load("@io_bazel_rules_docker//java:image.bzl", "java_image")
 
 cacerts_java(
     name = "cacerts_java",
 )
 
-[docker_build(
+[container_image(
     name = "java8" if (not mode) else mode[1:],
     base = "//cc" + mode,
     debs = [
