--- a/experimental/nodejs/BUILD
+++ b/experimental/nodejs/BUILD
@@ -1,8 +1,8 @@
 package(default_visibility = ["//visibility:public"])
 
-load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 
-[docker_build(
+[container_image(
     name = "nodejs" if (not mode) else mode[1:],
     base = "//cc" + mode,
     entrypoint = ["/nodejs/bin/node"],
