--- a/java/BUILD
+++ b/java/BUILD
@@ -17,17 +17,31 @@ cacerts_java(
         packages[jre_deb],
     ],
     entrypoint = ["/usr/bin/java"] + java_vm_args + ["-jar"],
-        # We expect users to use:
-        # cmd = ["/path/to/deploy.jar", "--option1", ...]
+    # We expect users to use:
+    # cmd = ["/path/to/deploy.jar", "--option1", ...]
     symlinks = {
         "/usr/bin/java": java_executable_path,
     },
     tars = [":cacerts_java"],
 ) for (rule_name, jre_deb, java_executable_path, java_vm_args) in [
-    ("java8", "openjdk-8-jre-headless", "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
-      ["-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap"]),
-    ("java8_debug", "openjdk-8-jre-headless", "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
-      ["-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap"]),
+    (
+        "java8",
+        "openjdk-8-jre-headless",
+        "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
+        [
+            "-XX:+UnlockExperimentalVMOptions",
+            "-XX:+UseCGroupMemoryLimitForHeap",
+        ],
+    ),
+    (
+        "java8_debug",
+        "openjdk-8-jre-headless",
+        "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
+        [
+            "-XX:+UnlockExperimentalVMOptions",
+            "-XX:+UseCGroupMemoryLimitForHeap",
+        ],
+    ),
     ("java11", "openjdk-11-jre-headless", "/usr/lib/jvm/java-11-openjdk-amd64/bin/java", []),
     ("java11_debug", "openjdk-11-jre-headless", "/usr/lib/jvm/java-11-openjdk-amd64/bin/java", []),
 ]]
