--- a/java/testdata/java11.yaml
+++ b/java/testdata/java11.yaml
@@ -1,10 +1,12 @@
-schemaVersion: "1.0.0"
+schemaVersion: "2.0.0"
 commandTests:
   - name: java
-    command: ["/usr/lib/jvm/java-11-openjdk-amd64/bin/java", "-version"]
+    command: "/usr/lib/jvm/java-11-openjdk-amd64/bin/java"
+    args: ["-version"]
     expectedError: ['openjdk version "11\.*']
   - name: java-symlink
-    command: ["/usr/bin/java", "-version"]
+    command: "/usr/bin/java"
+    args: ["-version"]
     expectedError: ['openjdk version "11\.*']
 fileExistenceTests:
   - name: certs
@@ -16,3 +18,7 @@ fileExistenceTests:
   - name: no-shell
     path: "/bin/sh"
     shouldExist: false
+metadataTest:
+  env:
+    - key: 'JAVA_VERSION'
+      value: '11.0.1'
