Add negative test cases for javac to distroless/java non-debug images.

--- a/java/jetty/testdata/java8.yaml
+++ b/java/jetty/testdata/java8.yaml
@@ -22,3 +22,6 @@ fileExistenceTests:
   - name: no-shell
     path: "/bin/sh"
     shouldExist: false
+  - name: no-javac
+    path: "/usr/lib/jvm/java-8-openjdk-amd64/bin/javac"
+    shouldExist: false
