--- a/java/jetty/testdata/java11.yaml
+++ b/java/jetty/testdata/java11.yaml
@@ -22,3 +22,6 @@ fileExistenceTests:
   - name: no-shell
     path: "/bin/sh"
     shouldExist: false
+  - name: no-javac
+    path: "/usr/lib/jvm/java-11-openjdk-amd64/bin/javac"
+    shouldExist: false
