--- a/java/testdata/java11.yaml
+++ b/java/testdata/java11.yaml
@@ -18,6 +18,9 @@ fileExistenceTests:
   - name: no-shell
     path: "/bin/sh"
     shouldExist: false
+  - name: no-javac
+    path: "/usr/lib/jvm/java-11-openjdk-amd64/bin/javac"
+    shouldExist: false
 metadataTest:
   env:
     - key: 'JAVA_VERSION'
